add attribution for audio stories

--- a/audio/asp/en/0311_dancing_audio-slides.html
+++ b/audio/asp/en/0311_dancing_audio-slides.html
@@ -98,8 +98,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/02.jpg" /></p>
-<p>I dance happy, I dance I dance lonely, I dance</p>
-<p>when I am when I am sad, when I am when I am mad.</p>
+<p>I dance when I am happy, I dance when I am sad, I dance when I am lonely, I dance when I am mad.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
@@ -147,7 +146,7 @@
 <section class="slide level1">
 
 <h2 id="dancing-1">Dancing</h2>
-<strong>Text:</strong> Mary Nabire, Tessa Welch<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Mary Nabire, Tessa Welch<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
