--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -22,13 +22,13 @@
       <h2>List of stories by language</h2>
         <h3>English</h3>
           <ul>
-            <li><a href="en/0003_school-clothes_audio-slides.html" target="_blank">School Clothes</a></li>
-            <li><a href="en/0085_an-egg-for-bridewealth_audio-slides.html" target="_blank">An Egg for Bridewealth</a></li>
-            <li><a href="en/0156_the-hungry-crocodile_audio-slides.html" target="_blank">The Hungry Crocodile</a></li>
-            <li><a href="en/0179_red_audio-slides.html" target="_blank">Red</a></li>
-            <li><a href="en/0190_esther-takes-mummys-sweets_audio-slides.html" target="_blank">Esther Takes Mummy's Sweets</a></li>
             <li><a href="en/0311_dancing_audio-slides.html" target="_blank">Dancing</a></li>
             <li><a href="en/0331_rain_audio-slides.html" target="_blank">Rain</a></li>
+            <li><a href="en/0179_red_audio-slides.html" target="_blank">Red</a></li>
+            <li><a href="en/0085_an-egg-for-bride-wealth_audio-slides.html" target="_blank">An Egg for Bride Wealth</a></li>
+            <li><a href="en/0156_the-hungry-crocodile_audio-slides.html" target="_blank">The Hungry Crocodile</a></li>
+            <li><a href="en/0190_esther-takes-mummys-sweets_audio-slides.html" target="_blank">Esther Takes Mummy's Sweets</a></li>
+            <li><a href="en/0003_school-clothes_audio-slides.html" target="_blank">School Clothes</a></li>
           </ul>
         <h3>Luganda</h3>
           <ul>
