--- a/audio/asp/lg/0066_nakku-nenviiri-essatu_audio-slides.html
+++ b/audio/asp/lg/0066_nakku-nenviiri-essatu_audio-slides.html
@@ -228,7 +228,7 @@
 <section class="slide level1">
 
 <h2 id="nakku-nenviiri-essatu-1">Nakku n'enviiri essatu</h2>
-<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Rev Joseph M Katabaro<br> <strong>Language:</strong> Luganda<br>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Rev Joseph M Katabaro<br> <strong>Language:</strong> Luganda<br> <strong>Read by:</strong> Elizabeth Namazzi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
