--- a/audio/asp/lg/0337_abaana-abaava-mu-nvumbo_audio-slides.html
+++ b/audio/asp/lg/0337_abaana-abaava-mu-nvumbo_audio-slides.html
@@ -218,7 +218,7 @@
 <section class="slide level1">
 
 <h2 id="abaana-abaava-mu-nvumbo-1">Abaana abaava mu nvumbo</h2>
-<strong>Text:</strong> Southern African Folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Mwesigwa Joshua Waswa<br> <strong>Language:</strong> Luganda<br>
+<strong>Text:</strong> Southern African Folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Mwesigwa Joshua Waswa<br> <strong>Language:</strong> Luganda<br> <strong>Read by:</strong> Elizabeth Namazzi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
