--- a/audio/asp/myx/0193_basooleli-babili-be-ntsala_audio-slides.html
+++ b/audio/asp/myx/0193_basooleli-babili-be-ntsala_audio-slides.html
@@ -150,7 +150,7 @@
 <section class="slide level1">
 
 <h2 id="basooleli-babili-be-ntsala-1">Basooleli babili be ntsala</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Cornelius Wekunya<br> <strong>Language:</strong> Lumasaaba<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Cornelius Wekunya<br> <strong>Language:</strong> Lumasaaba<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
