--- a/audio/no/0008_hva-gjør-du_audio-slides.html
+++ b/audio/no/0008_hva-gjør-du_audio-slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <h2 id="hva-gjør-du-1">Hva gjør du?</h2>
-<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjoner:</strong> Wiehan de Jager<br> <strong>Oversettelse:</strong> dohliam<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjoner:</strong> Wiehan de Jager<br> <strong>Oversettelse:</strong> dohliam<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
