--- a/audio/no/0127_ulike-leker_audio-slides.html
+++ b/audio/no/0127_ulike-leker_audio-slides.html
@@ -138,7 +138,7 @@
 <section class="slide level1">
 
 <h2 id="ulike-leker-1">Ulike leker</h2>
-<strong>Tekst:</strong> Ajarubo Philiam<br> <strong>Illustrasjoner:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Ajarubo Philiam<br> <strong>Illustrasjoner:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
