--- a/audio/asp/en/0156_the-hungry-crocodile_audio-slides.html
+++ b/audio/asp/en/0156_the-hungry-crocodile_audio-slides.html
@@ -149,7 +149,7 @@
 <section class="slide level1">
 
 <h2 id="the-hungry-crocodile-1">The hungry crocodile</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
