--- a/audio/asp/lg/0231_akatabo-kobudde_audio-slides.html
+++ b/audio/asp/lg/0231_akatabo-kobudde_audio-slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <h2 id="akatabo-kobudde-1">Akatabo k'obudde</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Mwesigwa Joshua Waswa<br> <strong>Language:</strong> Luganda<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Mwesigwa Joshua Waswa<br> <strong>Language:</strong> Luganda<br> <strong>Read by:</strong> Elizabeth Namazzi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
