--- a/audio/asp/myx/0165_mulongo-ni-wanasilikhe_audio-slides.html
+++ b/audio/asp/myx/0165_mulongo-ni-wanasilikhe_audio-slides.html
@@ -218,7 +218,7 @@
 <section class="slide level1">
 
 <h2 id="mulongo-ni-wanasilikhe-1">Mulongo ni wanasilikhe</h2>
-<strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Natalie Propa<br> <strong>Translation:</strong> <br> <strong>Language:</strong> Lumasaaba<br>
+<strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Natalie Propa<br> <strong>Translation:</strong> <br> <strong>Language:</strong> Lumasaaba<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
