--- a/audio/asp/myx/0293_niwulila-bulayi_audio-slides.html
+++ b/audio/asp/myx/0293_niwulila-bulayi_audio-slides.html
@@ -208,7 +208,7 @@
 <section class="slide level1">
 
 <h2 id="niwulila-bulayi-1">Niwulila bulayi</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Fabian Wakholi<br> <strong>Language:</strong> Lumasaaba<br>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Fabian Wakholi<br> <strong>Language:</strong> Lumasaaba<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
