--- a/audio/asp/myx/0294_kamarofu-ka-kuukhu_audio-slides.html
+++ b/audio/asp/myx/0294_kamarofu-ka-kuukhu_audio-slides.html
@@ -198,7 +198,7 @@
 <section class="slide level1">
 
 <h2 id="kamarofu-ka-kuukhu-1">Kamarofu ka Kuukhu</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Cornelius Wekunya<br> <strong>Language:</strong> Lumasaaba<br>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Cornelius Wekunya<br> <strong>Language:</strong> Lumasaaba<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
