--- a/audio/eo/0001_altulo_audio-slides.html
+++ b/audio/eo/0001_altulo_audio-slides.html
@@ -208,7 +208,7 @@
 <section class="slide level1">
 
 <h2 id="altulo-1">Altulo</h2>
-<strong>Teksto:</strong> Cornelius Gulere<br> <strong>Ilustrado:</strong> Catherine Groenewald<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br>
+<strong>Teksto:</strong> Cornelius Gulere<br> <strong>Ilustrado:</strong> Catherine Groenewald<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br> <strong>Voĉlegado:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
