--- a/audio/eo/0112_mia-korpo_audio-slides.html
+++ b/audio/eo/0112_mia-korpo_audio-slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <h2 id="mia-korpo-1">Mia korpo</h2>
-<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini<br> <strong>Tradukado:</strong> Espen Stranger-Johannessen<br> <strong>Lingvo:</strong> Esperanto<br>
+<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini<br> <strong>Tradukado:</strong> Espen Stranger-Johannessen<br> <strong>Lingvo:</strong> Esperanto<br> <strong>Voĉlegado:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
