--- a/audio/no/0001_en-veldig-høy-mann_audio-slides.html
+++ b/audio/no/0001_en-veldig-høy-mann_audio-slides.html
@@ -208,7 +208,7 @@
 <section class="slide level1">
 
 <h2 id="en-veldig-høy-mann-1">En veldig høy mann</h2>
-<strong>Tekst:</strong> Cornelius Gulere<br> <strong>Illustrasjoner:</strong> Catherine Groenewald<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Cornelius Gulere<br> <strong>Illustrasjoner:</strong> Catherine Groenewald<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
