--- a/audio/no/0002_se-på-dyrene_audio-slides.html
+++ b/audio/no/0002_se-på-dyrene_audio-slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <h2 id="se-på-dyrene-1">Se på dyrene</h2>
-<strong>Tekst:</strong> Jenny Katz<br> <strong>Illustrasjoner:</strong> Sandy Campbell<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Jenny Katz<br> <strong>Illustrasjoner:</strong> Sandy Campbell<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
