--- a/audio/no/0095_zama-er-flink_audio-slides.html
+++ b/audio/no/0095_zama-er-flink_audio-slides.html
@@ -218,7 +218,7 @@
 <section class="slide level1">
 
 <h2 id="zama-er-flink-1">Zama er flink!</h2>
-<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
