--- a/audio/no/0129_late-lillebror_audio-slides.html
+++ b/audio/no/0129_late-lillebror_audio-slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="late-lillebror-1">Late lillebror</h2>
-<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjoner:</strong> Mlungisi Dlamini<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjoner:</strong> Mlungisi Dlamini<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
