--- a/audio/no/0204_akatope_audio-slides.html
+++ b/audio/no/0204_akatope_audio-slides.html
@@ -238,7 +238,7 @@
 <section class="slide level1">
 
 <h2 id="akatope-1">Akatope</h2>
-<strong>Tekst:</strong> Alice Kapolondo<br> <strong>Illustrasjoner:</strong> Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Alice Kapolondo<br> <strong>Illustrasjoner:</strong> Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
