--- a/audio/no/0253_min-billedbok_audio-slides.html
+++ b/audio/no/0253_min-billedbok_audio-slides.html
@@ -138,7 +138,7 @@
 <section class="slide level1">
 
 <h2 id="min-billedbok-1">Min billedbok</h2>
-<strong>Tekst:</strong> Oku Modesto<br> <strong>Illustrasjoner:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Oversettelse:</strong> dohliam<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Oku Modesto<br> <strong>Illustrasjoner:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Oversettelse:</strong> dohliam<br> <strong>Språk:</strong> norsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
