fix nn metadata

--- a/audio/nn/0001_ein-veldig-høg-mann_audio-slides.html
+++ b/audio/nn/0001_ein-veldig-høg-mann_audio-slides.html
@@ -208,7 +208,7 @@
 <section class="slide level1">
 
 <h2 id="ein-veldig-høg-mann-1">Ein veldig høg mann</h2>
-<strong>Tekst:</strong> Cornelius Gulare<br> <strong>Illustrasjonar:</strong> Catherine Groenewald<br> <strong>Omsetjing:</strong> Espen Strangar-Johannessen<br> <strong>Språk:</strong> nynorsk<br> <strong>Read by:</strong> Espen Stranger-Johannessen<br>
+<strong>Tekst:</strong> Cornelius Gulare<br> <strong>Illustrasjonar:</strong> Catherine Groenewald<br> <strong>Omsetjing:</strong> Espen Strangar-Johannessen<br> <strong>Språk:</strong> nynorsk<br> <strong>Lest av:</strong> Espen Stranger-Johannessen<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
