update nn stories

--- a/stories/nn/0001_ein-veldig-høg-mann.html
+++ b/stories/nn/0001_ein-veldig-høg-mann.html
@@ -112,7 +112,7 @@ Cornelius Gulare<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 
-<p>Han sett på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
+<p>Han sat på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
