--- a/stories/nn/0095_zama_er_flink.html
+++ b/stories/nn/0095_zama_er_flink.html
@@ -57,7 +57,7 @@ Eg vaknar tidleg, fordi eg er flink!</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>Eg er ho som slepp inn sola.</p>
+<p>Eg er ho som slepp sola inn.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -121,7 +121,7 @@ Eg svarar: “Aldri, ikkje eg!”</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
 
-<p>I klassa gjer eg mitt beste i alle måtar.</p>
+<p>I klassa mi gjer eg mitt beste i alle måtar.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
