--- a/stories/nn/0127_ulike-leikar_slides.html
+++ b/stories/nn/0127_ulike-leikar_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="herr-fluge-og-herr-storhovud" class="slide level1">
-<h1>Herr Fluge og Herr Storhovud</h1>
+<section id="ulike-leikar" class="slide level1">
+<h1>Ulike leikar</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/02.jpg" /></p>
-<p>Dette er herr Fluge.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
+<p>Hoppa tau</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/03.jpg" /></p>
-<p>Dette er herr Storhovud.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
+<p>Laupa</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/04.jpg" /></p>
-<p>Herr Storhovud og herr Fluge var vener. Ein dag gjekk dei ein tur saman.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
+<p>Sparka ball</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,9 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/05.jpg" /></p>
-<p>Dei kom til ei elvebredd og byrja å krangla.</p>
-<p>Herr Fluge sa, &quot;du kan ikkje hoppa over denne elva.&quot; &quot;Jo, eg kan det! Det er du som ikkje kan!&quot; svarte herr Storhovud.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
+<p>Hoppa</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,39 +132,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/06.jpg" /></p>
-<p>&quot;Hopp du!&quot; sa herr Fluge. &quot;Nei, hopp du først,&quot; sa her Storhovud. Så her Fluge fløy over elva.</p>
-<center>
-<strong>5</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/07.jpg" /></p>
-<p>Så hoppa herr Storhovud inn i elva. Men hovudet hans var så stort at han byrja å søkka.</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/08.jpg" /></p>
-<p>Herr Fluge lo, &quot;ha, ha, ha!&quot; Men han lo så mye at munnen hans rakna frå han eine sidan til den andre!</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="herr-fluge-og-herr-storhovud-1">Herr Fluge og Herr Storhovud</h2>
-<strong>Tekst:</strong> Dorothy Fetaru<br> <strong>Illustrasjonar:</strong> Joshua Waswa<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<h2 id="ulike-leikar-1">Ulike leikar</h2>
+<strong>Tekst:</strong> Ajarubo Philiam<br> <strong>Illustrasjonar:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/mr-fly-and-mr-big-head'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/different-plays'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
