--- a/stories/nn/0253_bildeboka-mi_slides.html
+++ b/stories/nn/0253_bildeboka-mi_slides.html
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 40%;
+    width: 25%;
   }
   .license {
     font-size: small;
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ulike-leiker" class="slide level1">
-<h1>Ulike leiker</h1>
+<section id="bildeboka-mi" class="slide level1">
+<h1>Bildeboka mi</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
-<p>Hoppe tau</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
+<p>Ei jente</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
-<p>Laupa</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
+<p>Ein fugl</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
-<p>Sparka ball</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
+<p>Ei løve</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
-<p>Hoppe</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
+<p>Ein katt</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +132,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ulike-leiker-1">Ulike leiker</h2>
-<strong>Tekst:</strong> Ajarubo Philiam<br> <strong>Illustrasjonar:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<h2 id="bildeboka-mi-1">Bildeboka mi</h2>
+<strong>Tekst:</strong> Oku Modesto<br> <strong>Illustrasjonar:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/different-plays'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-picture-book-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
