--- a/stories/nn/0287_herr-fluge-og-herr-storhovud.html
+++ b/stories/nn/0287_herr-fluge-og-herr-storhovud.html
@@ -82,7 +82,7 @@ Dorothy Fetaru<br>nynorsk</div><div class="pagebreak">
 
 <p>“Hopp du!” sa herr Fluge.
 “Nei, hopp du først,” sa her Storhovud.
-Så her Fluge fløy over elva.</p>
+Så her Fluge flaug over elva.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -97,7 +97,7 @@ Så her Fluge fløy over elva.</p>
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/08.jpg" /></p>
 
 <p>Herr Fluge lo, “ha, ha, ha!”
-Men han lo så mye at munnen hans rakna frå han eine sidan til den andre!</p>
+Men han lo så mykje at munnen hans rakna frå han eine sidan til den andre!</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
