--- a/stories/nn/0287_herr-fluge-og-herr-storhovud_slides.html
+++ b/stories/nn/0287_herr-fluge-og-herr-storhovud_slides.html
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 25%;
+    width: 40%;
   }
   .license {
     font-size: small;
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="mi-bildebok" class="slide level1">
-<h1>Mi bildebok</h1>
+<section id="herr-fluge-og-herr-storhovud" class="slide level1">
+<h1>Herr Fluge og Herr Storhovud</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
-<p>Ei jente</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/02.jpg" /></p>
+<p>Dette er herr Fluge.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
-<p>Ein fugl</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/03.jpg" /></p>
+<p>Dette er herr Storhovud.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
-<p>Ei løve</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/04.jpg" /></p>
+<p>Herr Storhovud og herr Fluge var vener. Ein dag gjekk dei ein tur saman.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
-<p>Ein katt</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/05.jpg" /></p>
+<p>Dei kom til ei elvebredd og byrja å krangla.</p>
+<p>Herr Fluge sa, &quot;du kan ikkje hoppa over denne elva.&quot; &quot;Jo, eg kan det! Det er du som ikkje kan!&quot; svarte herr Storhovud.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +133,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="mi-bildebok-1">Mi bildebok</h2>
-<strong>Tekst:</strong> Oku Modesto<br> <strong>Illustrasjonar:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/06.jpg" /></p>
+<p>&quot;Hopp du!&quot; sa herr Fluge. &quot;Nei, hopp du først,&quot; sa her Storhovud. Så her Fluge flaug over elva.</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/07.jpg" /></p>
+<p>Så hoppa herr Storhovud inn i elva. Men hovudet hans var så stort at han byrja å søkka.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/08.jpg" /></p>
+<p>Herr Fluge lo, &quot;ha, ha, ha!&quot; Men han lo så mykje at munnen hans rakna frå han eine sidan til den andre!</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="herr-fluge-og-herr-storhovud-1">Herr Fluge og Herr Storhovud</h2>
+<strong>Tekst:</strong> Dorothy Fetaru<br> <strong>Illustrasjonar:</strong> Joshua Waswa<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-picture-book-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/mr-fly-and-mr-big-head'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
