--- a/stories/index.html
+++ b/stories/index.html
@@ -1437,8 +1437,8 @@
     </tr>
     <tr>
       <td>0127</td>
-      <td>Ulike leiker</td>
-      <td style="text-align: center"><a href="/stories/nn/0127_ulike-leiker.html">HTML</a> · <a href="/stories/nn/0127_ulike-leiker_slides.html" target="_blank">Slideshow</a></td>
+      <td>Ulike leikar</td>
+      <td style="text-align: center"><a href="/stories/nn/0127_ulike-leikar.html">HTML</a> · <a href="/stories/nn/0127_ulike-leikar_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbGZWNExJSU9DbFk">Google Drive</a></td>
       <td><a name="nn0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1452,7 +1452,7 @@
     <tr>
       <td>0134</td>
       <td>Viss eg var…</td>
-      <td style="text-align: center"><a href="/stories/nn/0134_hvis-jeg-var.html">HTML</a> · <a href="/stories/nn/0134_hvis-jeg-var_slides.html" target="_blank">Slideshow</a></td>
+      <td style="text-align: center"><a href="/stories/nn/0134_viss-eg-var.html">HTML</a> · <a href="/stories/nn/0134_viss-eg-var_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbGZWNExJSU9DbFk">Google Drive</a></td>
       <td><a name="nn0134"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -1479,8 +1479,8 @@
     </tr>
     <tr>
       <td>0253</td>
-      <td>Mi bildebok</td>
-      <td style="text-align: center"><a href="/stories/nn/0253_min-bildebok.html">HTML</a> · <a href="/stories/nn/0253_min-bildebok_slides.html" target="_blank">Slideshow</a></td>
+      <td>Bildeboka mi</td>
+      <td style="text-align: center"><a href="/stories/nn/0253_bildeboka-mi.html">HTML</a> · <a href="/stories/nn/0253_bildeboka-mi_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbGZWNExJSU9DbFk">Google Drive</a></td>
       <td><a name="nn0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1494,7 +1494,7 @@
     <tr>
       <td>0287</td>
       <td>Herr Fluge og Herr Storhovud</td>
-      <td style="text-align: center"><a href="/stories/nn/0287_herr-flue-og-herr-storhode.html">HTML</a> · <a href="/stories/nn/0287_herr-flue-og-herr-storhode_slides.html" target="_blank">Slideshow</a></td>
+      <td style="text-align: center"><a href="/stories/nn/0287_herr-fluge-og-herr-storhovud.html">HTML</a> · <a href="/stories/nn/0287_herr-fluge-og-herr-storhovud_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbGZWNExJSU9DbFk">Google Drive</a></td>
       <td><a name="nn0287"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1508,7 +1508,7 @@
     <tr>
       <td>0337</td>
       <td>Voksborna</td>
-      <td style="text-align: center"><a href="/stories/nn/0337_voksbarna.html">HTML</a> · <a href="/stories/nn/0337_voksbarna_slides.html" target="_blank">Slideshow</a></td>
+      <td style="text-align: center"><a href="/stories/nn/0337_voksborna.html">HTML</a> · <a href="/stories/nn/0337_voksborna_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbGZWNExJSU9DbFk">Google Drive</a></td>
       <td><a name="nn0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
