--- a/stories/nn/0001_ein-veldig-høg-mann_slides.html
+++ b/stories/nn/0001_ein-veldig-høg-mann_slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Han sett på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
+<p>Han sat på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
 <center>
 <strong>10</strong>
 </center>
