--- a/stories/nn/0073_å-telja-dyr.html
+++ b/stories/nn/0073_å-telja-dyr.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/06.jpg" /></p>
 
-<p>Sju froskar og åtte fiske er i vatnet.</p>
+<p>Sju froskar og åtte fiskar er i vatnet.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
