--- a/stories/nn/0095_zama_er_flink_slides.html
+++ b/stories/nn/0095_zama_er_flink_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Eg er ho som slepp inn sola.</p>
+<p>Eg er ho som slepp sola inn.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassa gjer eg mitt beste i alle måtar.</p>
+<p>I klassa mi gjer eg mitt beste i alle måtar.</p>
 <center>
 <strong>11</strong>
 </center>
