--- a/stories/nn/0112_kroppen-min.html
+++ b/stories/nn/0112_kroppen-min.html
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
 
-<p>Men eg kan aldri flyge med han.</p>
+<p>Men eg kan aldri flyga med han.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
