--- a/stories/nn/0112_kroppen-min_slides.html
+++ b/stories/nn/0112_kroppen-min_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
-<p>Men eg kan aldri flyge med han.</p>
+<p>Men eg kan aldri flyga med han.</p>
 <center>
 <strong>8</strong>
 </center>
