--- a/stories/nn/0129_late-veslebror_slides.html
+++ b/stories/nn/0129_late-veslebror_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>Kvifor jobbar eg såg hardt ...</p>
+<p>Kvifor jobbar eg så hardt ...</p>
 <center>
 <strong>7</strong>
 </center>
