--- a/stories/nn/0253_bildeboka-mi.html
+++ b/stories/nn/0253_bildeboka-mi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ulike leiker</title>
+    <title>Bildeboka mi</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -26,7 +26,7 @@
         font-weight: bold;
       }
       .cover {
-        background-color: #D8852A;
+        background-color: #89C9CC;
         min-width: 297mm;
         min-height: 209.5mm;
       }
@@ -41,42 +41,42 @@
     </style>
   </head>
   <body>
-<div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/01.jpg" />
+<div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 
-<h1 id="ulike-leiker">Ulike leiker</h1>
+<h1 id="bildeboka-mi">Bildeboka mi</h1>
 
-Ajarubo Philiam<br>nynorsk</div><div class="pagebreak">
+Oku Modesto<br>nynorsk</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
 
-<p>Hoppe tau</p>
+<p>Ei jente</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
 
-<p>Laupa</p>
+<p>Ein fugl</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
 
-<p>Sparka ball</p>
+<p>Ei løve</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
 
-<p>Hoppe</p>
+<p>Ein katt</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Ajarubo Philiam<br /><strong>Illustrasjonar:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/different-plays">here</a>
+<p><strong>Tekst:</strong> Oku Modesto<br /><strong>Illustrasjonar:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
