fix button links

--- a/audio/index.html
+++ b/audio/index.html
@@ -53,5 +53,5 @@
           </ul>
 
   </body>
-  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY). Found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>.</p></footer>
+  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY). Found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. View or fork this project <a href="https://github.com/global-asp/gasp-audio">on GitHub</a>.</p></footer>
 </html>
