corrections (da & sv)

--- a/stories/da/0001_en-riktigt-høj-mand_slides.html
+++ b/stories/da/0001_en-riktigt-høj-mand_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>Hakken hans var for kort.</p>
+<p>Hans hakke var for kort.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>Døråbningen hans var for lav.</p>
+<p>Hans døråbning var for lav.</p>
 <center>
 <strong>2</strong>
 </center>
