--- a/stories/da/0009_hvor-er-min-kat.html
+++ b/stories/da/0009_hvor-er-min-kat.html
@@ -77,14 +77,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>dansk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
 
-<p>Er den ved siden af bøtten?</p>
+<p>Er den ved siden af skraldespanden?</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
 
-<p>Er den inde i kurven?</p>
+<p>Er den i kurven?</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
