--- a/stories/sv/0009_var-är-min-katt.html
+++ b/stories/sv/0009_var-är-min-katt.html
@@ -70,28 +70,28 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>svenska</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
 
-<p>Er den bak soffan?</p>
+<p>Är den bak soffan?</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
 
-<p>Er den bredvid av soptunnan?</p>
+<p>Är den bredvid soptunnan?</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
 
-<p>Er den i korgen?</p>
+<p>Är den i korgen?</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
 
-<p>Er den utanför huset?</p>
+<p>Är den utanför huset?</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
