--- a/stories/sv/0204_akatope.html
+++ b/stories/sv/0204_akatope.html
@@ -63,7 +63,7 @@ Alice Kapolondo<br>svenska</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/04.jpg" /></p>
 
-<p>Flickan som var gjord av lera var en riktig människa flicka.</p>
+<p>Flickan som var gjord av lera var en riktig människaflicka.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Alice Kapolondo<br>svenska</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/08.jpg" /></p>
 
-<p>De andra barnen sprang till sina hyddor, men sedan Akatope sprang till henne, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
+<p>De andra barnen sprang till sina hyddor, men när Akatope sprang till sin, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Alice Kapolondo<br>svenska</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/10.jpg" /></p>
 
-<p>När den gamla damen hörde vad som hade drabbat hennes barn, ropade hon i flera dagar. Byborna har beslutat att ta med en annan liten flicka som hade blivit föräldralös till at ta Akatopes plats.</p>
+<p>När den gamla damen hörde vad som hade drabbat hennes barn, grät hon i flera dagar. Byborna  beslutade att ta med en annan liten flicka som hade blivit föräldralös för att ta Akatopes plats.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -119,14 +119,14 @@ Alice Kapolondo<br>svenska</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/12.jpg" /></p>
 
-<p>Några dagar efter at den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
+<p>Några dagar efter att den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/13.jpg" /></p>
 
-<p>“Vem kan det vara,” förundrade den gamla damen. När hon öppnade dörren hon var utom sig av upphetsning.</p>
+<p>“Vem kan det vara,” undrade den gamla damen. När hon öppnade dörren hon var utom sig av sinnesrörelse.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
