--- a/stories/sv/0204_akatope_slides.html
+++ b/stories/sv/0204_akatope_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/04.jpg" /></p>
-<p>Flickan som var gjord av lera var en riktig människa flicka.</p>
+<p>Flickan som var gjord av lera var en riktig människaflicka.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/08.jpg" /></p>
-<p>De andra barnen sprang till sina hyddor, men sedan Akatope sprang till henne, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
+<p>De andra barnen sprang till sina hyddor, men när Akatope sprang till sin, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/10.jpg" /></p>
-<p>När den gamla damen hörde vad som hade drabbat hennes barn, ropade hon i flera dagar. Byborna har beslutat att ta med en annan liten flicka som hade blivit föräldralös till at ta Akatopes plats.</p>
+<p>När den gamla damen hörde vad som hade drabbat hennes barn, grät hon i flera dagar. Byborna beslutade att ta med en annan liten flicka som hade blivit föräldralös för att ta Akatopes plats.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/12.jpg" /></p>
-<p>Några dagar efter at den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
+<p>Några dagar efter att den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/13.jpg" /></p>
-<p>&quot;Vem kan det vara,&quot; förundrade den gamla damen. När hon öppnade dörren hon var utom sig av upphetsning.</p>
+<p>&quot;Vem kan det vara,&quot; undrade den gamla damen. När hon öppnade dörren hon var utom sig av sinnesrörelse.</p>
 <center>
 <strong>12</strong>
 </center>
