--- a/stories/da/0001_en-riktigt-høj-mand.html
+++ b/stories/da/0001_en-riktigt-høj-mand.html
@@ -49,14 +49,14 @@ Cornelius Gulere<br>dansk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
-<p>Hakken hans var for  kort.</p>
+<p>Hans hakke var for  kort.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p>Døråbningen hans var for lav.</p>
+<p>Hans døråbning var for lav.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
