--- a/stories/da/0009_hvor-er-min-kat_slides.html
+++ b/stories/da/0009_hvor-er-min-kat_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Er den ved siden af bøtten?</p>
+<p>Er den ved siden af skraldespanden?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>Er den inde i kurven?</p>
+<p>Er den i kurven?</p>
 <center>
 <strong>6</strong>
 </center>
