--- a/stories/sv/0009_var-är-min-katt_slides.html
+++ b/stories/sv/0009_var-är-min-katt_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p>Är den bak soffan?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p>Är den bredvid soptunnan?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p>Är den i korgen?</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
+<p>Är den utanför huset?</p>
 <center>
 <strong>7</strong>
 </center>
