--- a/stories/sv/0156_den-hungriga-krokodilen.html
+++ b/stories/sv/0156_den-hungriga-krokodilen.html
@@ -58,7 +58,7 @@ Christian G.<br>svenska</div><div class="pagebreak">
 
 <p>Han sökte efter mat långsamt och tyst.</p>
 
-<p>Och så…</p>
+<p>Och därefter…</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
